--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APCA_API_KEY_ID=PKOPC7DDM6Q3SSTB66RW
 APCA_API_SECRET_KEY=Y99rEWBw2IgfEOP2e3qkmQoymMCIympPFC4pHhec 
 APCA_BASE_URL=https://paper-api.alpaca.markets
+ALPHA_VANTAGE_API_KEY=L2VLQS22KW9PR7EC
 SYMBOL=AAPL 
 POSITION_SIZE_USD=500 
 POLL_INTERVAL_SECONDS=3600 
