updated from vs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-pandas
-numpy
-yfinance==0.2.33 
-alpaca-trade-api==2.3.0 
-python-dotenv==1.0.0 
-requests==2.31.0 
-urllib3==1.26.18 
+pandas==1.5.3
+numpy==1.24.3
+yfinance==0.2.33
+alpaca-trade-api==2.3.0
+python-dotenv==1.0.0
+requests==2.31.0
+urllib3==1.26.18
 websockets==10.4
-pandas-ta
-google-generativeai
-scikit-learn>=1.4.0
+google-generativeai==0.3.2
+scikit-learn==1.2.2
+matplotlib==3.7.1
