--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - DATA_API_URL=${DATA_API_URL}
       - NEWS_API_KEY=${NEWS_API_KEY}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - PERPLEXITY_API_KEY=${PERPLEXITY_API_KEY}
       - POSITION_SIZE_USD=${POSITION_SIZE_USD:-500}
       - POLL_INTERVAL_SECONDS=${POLL_INTERVAL_SECONDS:-60}
       - BASE_STOP_LOSS_PERCENT=${BASE_STOP_LOSS_PERCENT:-8.0}
